explorer/explorerdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: explorerdb-service
  namespace: explorer
spec:
  selector:
    app: explorer-db
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: explorer-db
  namespace: explorer
spec:
  serviceName: explorerdb-service
  selector:
    matchLabels:
      app: explorer-db
  template:
    metadata:
      labels:
        app: explorer-db
    spec:
      containers:
        - name: explorer-db
          image: ghcr.io/hyperledger-labs/explorer-db:2.0
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /Postgres/Data/
              name: explorer-db

  volumeClaimTemplates:
    - metadata:
        name: explorer-db
      spec:
        storageClassName: fabric-sc
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
